<resources>
    <string name="app_name">RFIDDemo</string>
    <string name="version">Version:</string>
    <string name="dmin">MinFre:</string>
    <string name="band">Band:</string>
    <string name="dmax">MaxFre:</string>
    <string name="power">Power:</string>
    <string name="scantime">MaxScanTime:</string>
    <string name="btstop">Stop</string>
    <string name="basicparam">Basic Parameter</string>
    <string name="scanparam">Inventory Parameter</string>
    <string name="qvalue">Q:</string>
    <string name="session">Session:</string>
    <string name="tidptr">WordPtr:</string>
    <string name="tidlen">Length:</string>
    <string name="IvtType">Read Mode:</string>
    <string name="ReadType">Mix-Read Mem:</string>
    <string name="getstr">Get</string>
    <string name="setstr">Set</string>
    <string name="txtepc">EPC:</string>
    <string name="bankid">Bank:</string>
    <string name="memptr">Ptr:</string>
    <string name="memlen">Len:</string>
    <string name="pwdstr">Access Pwd:</string>
    <string name="readstr">ReadData:</string>
    <string name="writestr">WriteData:</string>
    <string name="butnread">Read</string>
    <string name="butnwrite">Write</string>
    <string name="butnwriteepc">WriteEPC</string>
    <string name="tab_scan">Inventory</string>
    <string name="tab_rw">Access</string>
    <string name="tab_param">Config</string>
    <string name="power_error">Power set failed</string>
    <string name="frequent_error">Frequency set failed</string>
    <string name="get_success">Read Success</string>
    <string name="get_failed">Read Failed</string>
    <string name="btn_openrf">Open RF</string>
    <string name="btn_closerf">Close RF</string>
    <string name="txt_temp">Temperature</string>
    <string name="txt_returnloss">Return Loss:</string>
    <string name="txt_read">Read</string>
    <string name="write_failed">Write Failed</string>
    <string name="write_success">Write Success</string>
    <string name="kill_failed">Kill Failed</string>
    <string name="kill_success">Kill Success</string>
    <string name="lock_failed">Lock Failed</string>
    <string name="lock_success">Lock Success</string>
    <string name="info_result">Result:</string>
    <string name="btStoping">Stoping</string>
    <string name="btn_answer">Answer Mode</string>
    <string name="btn_active">Active Mode</string>
    <string name="timeInterval">Interval:</string>
    <string name="tidptr_empty_warning">TID can not be empty!</string>
    <string name="wordptr_empty_warning">WordPtr can not be empty!</string>
    <string name="length_empty_warning">Length can not be empty!</string>
    <string name="pwd_empty_warning">Password can not be empty!</string>
    <string name="content_empty_warning">Write data need content not be empty!</string>
    <string name="length_content_warning">Length and content does not match!</string>
    <string name="str_lenght_odd_warning">Length of every data can not be odd!</string>
    <string name="set_success">Set Success</string>
    <string name="set_failed">Set Failed</string>
    <string name="openport_failed">Connect Failed(Please ensure that the module is powered on.)</string>
    <string name="CardNum">Number:&#160;&#160;</string>
    <string name="CardCount">Times:&#160;&#160;</string>
    <string name="CardSpeed">Speed:&#160;&#160;</string>
    <string name="tvTagCount">Count</string>
    <string name="btClear">Clear</string>
    <string name="ReadTime">Time(sec):&#160;&#160;</string>
    <string name="tvTagUii">TAG</string>
    <string name="tvTagLen">Length</string>
    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryOnce">Once</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="btInventory">Start Inventory</string>
    <string name="btStart">Start</string>
    <string name="title_stop_Inventory">Stop Inventory</string>
    <string name="btStop">Stop</string>
    <string name="dwelltime">DwellTime:</string>
    <string name="btImport">Export</string>
    <string name="tvKillPwd">Kill Pwd：</string>
    <string name="btKill">Kill</string>
    <string name="btlock">Lock</string>
    <string name="tvLockMem">Lock Mem：</string>
    <string name="tvLockType">Lock Type：</string>
    <string name="noteStr">Lock or kill password can not be 00000000</string>
    <string-array name="men_select">
        <item>Reserve</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="readmen_select">
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="IvtType_select">
        <item>EPC-Type</item>
        <item>Mix-Type</item>
        <item>FastID-Type</item>
    </string-array>
    <string-array name="men_s">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="ab_target">
        <item>A</item>
        <item>B</item>
        <item>A/B</item>
    </string-array>
    <string-array name="men_q">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="arrayLock">
        <item>Unlock</item>
        <item>Permanent Unlock</item>
        <item>Lock</item>
        <item>Permanent Lock</item>

    </string-array>
    <string-array name="arrayLockMem">
        <item>Kill password</item>
        <item>Access password</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="en_select">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>
    <string-array name="en_sp_inv_mode">
        <item>Battery Life</item>
        <item>Full Inventory</item>
        <item>Rapid Repeat</item>
        <item>Balanced Performance</item>
        <item>Cycle Count</item>
        <item>Max Range</item>
        <item>Custom Mode</item>
    </string-array>
    <string name="inv_mode_battery_life">Battery Life</string>
    <string name="inv_mode_full_inventory">Full Inventory</string>
    <string name="inv_mode_rapid_repeat">Rapid Repeat</string>
    <string name="inv_mode_balanced">Balanced Performance</string>
    <string name="inv_mode_cycle_count">Cycle Count</string>
    <string name="inv_mode_max_range">Max Range</string>
    <string name="inv_mode_custom">Custom Mode</string>
    <string name="inv_mode_battery_life_desc">Extends battery life; ideal for high power-consumption scenarios but offers average inventory performance.</string>
    <string name="inv_mode_full_inventory_desc">Reads tags as quickly as possible; suitable for most scenarios with more stable performance than Cycle, positioned between Rapid and Cycle modes.</string>
    <string name="inv_mode_rapid_repeat_desc">Quickly inventories tags with rapidly increasing duplicate counts; ideal for speed demos but less comprehensive.</string>
    <string name="inv_mode_balanced_desc">Balanced between speed and battery life; suitable for environments with stable reading conditions.</string>
    <string name="inv_mode_cycle_count_desc">Inventories all tags with no duplicate counts; suited for high-interference environments but slower on subsequent reads.</string>
    <string name="inv_mode_max_range_desc">Suitable for single-tag long-range testing.</string>
    <string name="inv_mode_custom_desc">Customize some parameters according to your needs.</string>
    <string-array name="city_array">
        <item>ALB</item>
        <item>ARG</item>
        <item>ARM</item>
        <item>AUT</item>
        <item>AZE</item>
        <item>BLR</item>
        <item>BEL</item>
        <item>BIH</item>
        <item>BRA</item>
        <item>BUL</item>
        <item>CAN</item>
        <item>CHI</item>
        <item>CHN</item>
        <item>COL</item>
        <item>CRC</item>
        <item>CRO</item>
        <item>CYP</item>
        <item>CZE</item>
        <item>DEN</item>
        <item>DOM</item>
        <item>EST</item>
        <item>FIN</item>
        <item>FRA</item>
        <item>GER</item>
        <item>GRE</item>
        <item>HUN</item>
        <item>ISL</item>
        <item>IRI</item>
        <item>ITA</item>
        <item>KOR</item>
        <item>LIE</item>
        <item>LTU</item>
        <item>LUX</item>
        <item>MKD</item>
        <item>MLT</item>
        <item>MEX</item>
        <item>MDA</item>
        <item>NED</item>
        <item>NZL</item>
        <item>NGR</item>
        <item>NOR</item>
        <item>CHN</item>
        <item>PAN</item>
        <item>PER</item>
        <item>POL</item>
        <item>POR</item>
        <item>ROM</item>
        <item>RUS</item>
        <item>KSA</item>
        <item>USA</item>
        <item>SVK</item>
        <item>SLO</item>
        <item>RSA</item>
        <item>ESP</item>
        <item>SWE</item>
        <item>SUI</item>
        <item>HKG</item>
        <item>THA</item>
        <item>TUN</item>
        <item>TUR</item>
        <item>UAE</item>
        <item>GBR</item>
        <item>USA</item>
        <item>URU</item>
        <item>VEN</item>
        <item>UKR</item>
        <item>MAS</item>
        <item>SIN</item>
        <item>AUS</item>
        <item>IND</item>
        <item>VIE</item>
        <item>ISR</item>
        <item>INA</item>
        <item>JPN</item>
        <item>PHI</item>
    </string-array>
    <string-array name="en_select2">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>
    <string-array name="en_tranfer_type">
        <item>RFID Off-line data</item>
        <item>Scan Off-line data</item>
    </string-array>
    <string-array name="Power_select">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
    </string-array>
    <string name="msgImportsuc">Export success</string>
    <string name="msgImportfailed">Export failed</string>
    <string name="msgNodata">No data to export</string>
    <string name="StrLED">LED ON</string>
    <string name="Optsuccess">Operation successed</string>
    <string name="Optfailed">Operation failed</string>
    <string name="txt_range_controll">Range Control：</string>
    <string name="strmaskmem">MaskMem:</string>
    <string name="strmaskaddr">MaskAddr:</string>
    <string name="strmasklen">MaskLen:</string>
    <string name="strmaskdata">MaskData:</string>
    <string name="strmaskadd">Add</string>
    <string name="strmaskclear">Clear</string>
    <string name="strsuccess">Success!!!</string>
    <string name="strfailed">Failed!!!</string>
    <string name="tab_mask">Mask</string>
    <string name="tab_gen2x">Gen2X</string>
    <string name="strantchcek">AntennaCheck:</string>
    <string name="finding">Find</string>
    <string name="strfactory">Factory:</string>
    <string name="strfilter">Filter</string>
    <string name="tag_info">Tag Info</string>
    <string name="select_epc">Select EPC</string>
</resources>